# money-flow

./: .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  build.sh  cloudbuild.yaml  main.py  main_test.py  pyproject.toml  requirements.txt
notebooks/: salary_sorter.ipynb
src/: allocation.py  automate.py  bunq.py  strategies.py
src/money_flow/: __init__.py  __main__.py  allocation.py  automate.py  bunq.py  main.py  strategies.py
